[workspace]

members = [
    "common/logger",
    "common/io",
    "common/error",
    "common/thread",
    "common/bigint",
    "common/util",

    "communication/pubsub_zeromq",
    "communication/pubsub_rabbitmq",
    "communication/pubsub_kafka",
    "communication/pubsub",

    "cryptography/bloom",
    "cryptography/bloomable",
    "cryptography/sha3",
    "cryptography/blake2b",
    "cryptography/sm3",

    "serialize/rlp",
    "serialize/rlp_derive",
]
