[workspace]

members = [
    "common/logger",
    "common/io",
    "common/error",
    "common/thread",
    "common/bigint",
    "common/util",

    "communication/pubsub_zeromq",
    "communication/pubsub_rabbitmq",
    "communication/pubsub_kafka",
    "communication/pubsub",

    "cryptography/bloom",
    "cryptography/bloomable",
    "cryptography/sha3",
    "cryptography/blake2b",
    "cryptography/sm2",
    "cryptography/sm3",
    "cryptography/secp256k1",
    "cryptography/ed25519",
    "cryptography/crypto",
    "cryptography/ethkey",

    "serialize/rlp",
    "serialize/rlp_derive",
    "serialize/proto",
]
