[workspace]

members = [
    "common/logger",
    "common/ethcore-io",
    "common/error",
    "common/thread",
    "common/bigint",
    "common/util",

    "communication/pubsub_zeromq",
    "communication/pubsub_rabbitmq",
    "communication/pubsub_kafka",
    "communication/pubsub",

    "cryptography/ethcore-bloom-journal",
    "cryptography/bloomable",
    "cryptography/sha3",
    "cryptography/blake2b",
    "cryptography/cita-sm2",
    "cryptography/sm3",
    "cryptography/cita-secp256k1",
    "cryptography/cita-ed25519",
    "cryptography/cita-crypto",
    "cryptography/ethkey",

    "serialize/rlp",
    "serialize/rlp_derive",
    "serialize/libproto",

    "blockchain/tx_pool",

    "consensus/proof",
    "consensus/engine_json",
    "consensus/authority_manage",
]
