[package]
name = "tx_pool"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
libproto = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "07cfa04" }
util = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "47da817" }
cita-crypto = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "07cfa04" }
