[package]
name = "pubsub"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
dotenv = "0.10.0"
pubsub_zeromq = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "8d1ecd1", optional = true }
pubsub_rabbitmq = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "8d1ecd1", optional = true }
pubsub_kafka = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "8d1ecd1", optional = true }

[features]
default = ["rabbitmq"]
rabbitmq = ["pubsub_rabbitmq"]
zeromq = ["pubsub_zeromq"]
kafka = ["pubsub_kafka"]
