[package]
name = "pubsub"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
dotenv = "0.10.0"
pubsub_zeromq = { path = "../../communication/pubsub_zeromq", optional = true }
pubsub_rabbitmq = { path = "../../communication/pubsub_rabbitmq", optional = true }
pubsub_kafka = { path = "../../communication/pubsub_kafka", optional = true }

[features]
default = ["rabbitmq"]
rabbitmq = ["pubsub_rabbitmq"]
zeromq = ["pubsub_zeromq"]
kafka = ["pubsub_kafka"]
