[package]
name = "engine"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
libproto = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "b8a467c" }
util = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "47da817" }
protobuf = { version = "^1.0.0" }
cita-crypto = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "b8a467c" }
engine_json = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "b8a467c" }
proof = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "b8a467c" }
pubsub = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "3910698" }
