[package]
name = "engine"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
libproto = { path = "../../serialize/libproto" }
util = { path = "../../common/util" }
protobuf = { version = "^1.0.0" }
cita-crypto = { path = "../../cryptography/cita-crypto" }
engine_json = { path = "../../consensus/engine_json" }
proof = { path = "../../consensus/proof" }
pubsub = { path = "../../communication/pubsub" }
