[package]
name = "engine_json"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
cita-crypto = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "55184bd" }
util = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "6a5e287" }
