[package]
name = "proof"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
libproto = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "139529a" }
cita-crypto = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "c6b8ef8" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "0.8.0"
util = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "6a5e287" }
rustc-serialize = "0.3"
