[package]
name = "cita-crypto"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
cita-ed25519 = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "6f0abf0", optional = true }
cita-secp256k1 = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "6f0abf0", optional = true }
cita-sm2 = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "6f0abf0", optional = true }
util = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "6a5e287" }

[features]
default = ["secp256k1"]
ed25519 = ["cita-ed25519"]
secp256k1 = ["cita-secp256k1"]
sm2 = ["cita-sm2"]
