[package]
name = "cita-crypto"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
cita-ed25519 = { path = "../../cryptography/cita-ed25519", optional = true  }
cita-secp256k1 = { path = "../../cryptography/cita-secp256k1", optional = true  }
cita-sm2 = { path = "../../cryptography/cita-sm2", optional = true  }
util = { path = "../../common/util" }

[features]
default = ["secp256k1"]
ed25519 = ["cita-ed25519"]
secp256k1 = ["cita-secp256k1"]
sm2 = ["cita-sm2"]
