[package]
description = "proto"
name = "libproto"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
protobuf = { version = "^1.0.0"}
cita-crypto = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "07cfa04" }
util = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "47da817" }
rustc-serialize = "0.3"
rlp = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "77e2c45" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.3"
